--- a/app/res/layout-land/home_screen.xml
+++ b/app/res/layout-land/home_screen.xml
@@ -71,58 +71,78 @@
             android:text="@string/connect_payment_confirm_no"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/home_connect_progress_tile"
+    <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:visibility="visible"
-        >
+        android:layout_height="wrap_content">
 
-        <ProgressBar
-            android:id="@+id/home_connect_prog_bar"
-            style="@style/Base.Widget.AppCompat.ProgressBar.Horizontal"
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="50dp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginLeft="@dimen/content_start"
-            android:layout_marginRight="@dimen/content_start"
-            android:indeterminate="false"
-            android:indeterminateOnly="false"
-            android:max="100"
-            android:paddingBottom="@dimen/content_start"
-            android:paddingTop="@dimen/content_start"
-            android:progress="0"
-            android:progressTint="@color/green"
-            android:progressDrawable="@drawable/progressbar_modern"
-            android:layout_marginStart="@dimen/content_start"
-            android:layout_marginEnd="@dimen/content_start"
-            />
-        <TextView
-            android:id="@+id/home_connect_prog_text"
-            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:layout_constraintStart_toStartOf="@id/home_connect_prog_bar"
-            app:layout_constraintTop_toTopOf="@id/home_connect_prog_bar"
-            app:layout_constraintBottom_toBottomOf="@id/home_connect_prog_bar"
-            android:layout_marginStart="5dp"
-            android:textStyle="bold"
-            />
-        <TextView
-            android:id="@+id/home_connect_prog_max_text"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_constraintEnd_toEndOf="@id/home_connect_prog_bar"
-            app:layout_constraintTop_toTopOf="@id/home_connect_prog_bar"
-            app:layout_constraintBottom_toBottomOf="@id/home_connect_prog_bar"
-            android:layout_marginEnd="5dp"
-            android:textStyle="bold"
-            />
-    </androidx.constraintlayout.widget.ConstraintLayout>
+            android:orientation="vertical">
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/home_gridview_buttons"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:scrollbars="vertical"/>
+            <androidx.cardview.widget.CardView
+                android:id="@+id/cvDailyLimitView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/viewJobCard"
+                android:layout_marginLeft="10dp"
+                android:layout_marginTop="-35dp"
+                android:layout_marginRight="10dp"
+                app:cardBackgroundColor="@color/connect_light_orange_color"
+                app:cardCornerRadius="15dp"
+                app:cardElevation="10dp">
+
+                <androidx.constraintlayout.widget.ConstraintLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="horizontal"
+                    android:paddingStart="15dp"
+                    android:paddingTop="35dp"
+                    android:layout_marginBottom="15dp"
+                    android:paddingEnd="15dp">
+
+                    <org.commcare.views.connect.connecttextview.ConnectMediumTextView
+                        android:id="@+id/tvOverLimitDescription"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:text="@string/connect_job_tile_daily_limit_description"
+                        android:layout_marginEnd="10dp"
+                        android:textColor="@color/connect_warning_color"
+                        android:textSize="14sp"
+                        app:layout_constraintBottom_toBottomOf="@+id/btnOverLimit"
+                        app:layout_constraintEnd_toStartOf="@+id/btnOverLimit"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent" />
+
+                    <org.commcare.views.connect.RoundedButton
+                        android:id="@+id/btnOverLimit"
+                        android:layout_width="wrap_content"
+                        android:layout_height="30dp"
+                        android:text="@string/connect_job_tile_daily_limit"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:roundButtonTextSize="4sp" />
+                </androidx.constraintlayout.widget.ConstraintLayout>
+            </androidx.cardview.widget.CardView>
+
+            <include
+                layout="@layout/view_progress_job_card"
+                android:id="@+id/viewJobCard"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="10dp"
+                android:layout_marginEnd="10dp"
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="10dp"
+                android:layout_width="match_parent" />
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/home_gridview_buttons"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_below="@+id/cvDailyLimitView"
+                android:nestedScrollingEnabled="false"
+                android:scrollbars="vertical" />
+        </RelativeLayout>
+    </androidx.core.widget.NestedScrollView>
 </LinearLayout>
