--- a/app/res/layout/fragment_connect_delivery_details.xml
+++ b/app/res/layout/fragment_connect_delivery_details.xml
@@ -158,6 +158,7 @@
                             android:id="@+id/linearLayout"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
+                            android:layout_weight="1"
                             android:orientation="vertical"
                             app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintStart_toStartOf="parent"
@@ -165,7 +166,7 @@
 
                             <org.commcare.views.connect.connecttextview.ConnectRegularTextView
                                 android:id="@+id/connect_delivery_action_title"
-                                android:layout_width="match_parent"
+                                android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:text="@string/connect_job_info_start_visit"
                                 android:textColor="@color/white"
@@ -174,7 +175,7 @@
 
                             <org.commcare.views.connect.connecttextview.ConnectRegularTextView
                                 android:id="@+id/connect_delivery_action_details"
-                                android:layout_width="match_parent"
+                                android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:text="@string/connect_job_info_download_delivery"
                                 android:textAlignment="center"
