--- a/app/res/layout/fragment_connect_learning_progress.xml
+++ b/app/res/layout/fragment_connect_learning_progress.xml
@@ -68,10 +68,12 @@
                 <androidx.cardview.widget.CardView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_margin="16dp"
+                    android:layout_marginStart="16dp"
+                    android:layout_marginEnd="16dp"
+                    android:layout_marginTop="16dp"
+                    android:layout_marginBottom="8dp"
                     android:backgroundTint="@color/connect_dark_blue_color"
                     android:elevation="5dp"
-                    android:padding="16dp"
                     app:cardCornerRadius="24dp">
 
                     <LinearLayout
@@ -133,6 +135,51 @@
                             </LinearLayout>
                         </androidx.constraintlayout.widget.ConstraintLayout>
                     </LinearLayout>
+                </androidx.cardview.widget.CardView>
+
+                <androidx.cardview.widget.CardView
+                    android:id="@+id/clRefreshView"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="16dp"
+                    android:layout_marginEnd="16dp"
+                    android:layout_marginBottom="16dp"
+                    android:background="@color/transparent"
+                    app:cardCornerRadius="10dp">
+
+                    <androidx.constraintlayout.widget.ConstraintLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:background="@color/connect_blue_color_10"
+                        android:padding="16dp">
+
+                        <org.commcare.views.connect.connecttextview.ConnectRegularTextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="@string/connect_click_to_sync_progress"
+                            android:textColor="@color/black"
+                            android:textSize="15sp"
+                            app:layout_constraintBottom_toBottomOf="parent"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintTop_toTopOf="parent" />
+
+                        <org.commcare.views.connect.RoundedButton
+                            android:id="@+id/btnSync"
+                            android:layout_width="wrap_content"
+                            android:layout_height="40dp"
+                            android:text="Sync"
+                            app:layout_constraintBottom_toBottomOf="parent"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintTop_toTopOf="parent"
+                            app:roundButtonBackgroundColor="@color/connect_dark_blue_color"
+                            app:roundButtonFontFamily="@font/roboto_medium"
+                            app:roundButtonIcon="@drawable/ic_connect_directory_sync"
+                            app:roundButtonIconLeftAlign="false"
+                            app:roundButtonIconPadding="5dp"
+                            app:roundButtonTextColor="@color/white"
+                            app:roundButtonTextSize="5sp" />
+
+                    </androidx.constraintlayout.widget.ConstraintLayout>
                 </androidx.cardview.widget.CardView>
             </LinearLayout>
         </androidx.cardview.widget.CardView>
@@ -259,16 +306,6 @@
         </androidx.cardview.widget.CardView>
 
         <TextView
-            android:id="@+id/connect_learning_claim_label"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            android:textAlignment="center"
-            android:textSize="@dimen/text_large"
-            android:visibility="visible"
-            tools:text="@string/connect_learn_claim_label" />
-
-        <TextView
             android:id="@+id/connect_learning_ended_text"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -297,45 +334,6 @@
             app:roundButtonBackgroundColor="@color/connect_blue_color"
             app:roundButtonTextColor="@color/white"
             tools:text="Button" />
-
-        <androidx.cardview.widget.CardView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="16dp"
-            android:backgroundTint="#353ba6"
-            android:elevation="2dp"
-            android:padding="16dp"
-            app:cardCornerRadius="24dp">
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:padding="16dp">
-
-                <TextView
-                    android:id="@+id/connect_job_intro_learning_summary"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="8dp"
-                    android:layout_weight="1"
-                    android:text="@string/click_to_sync"
-                    android:textColor="@color/white"
-                    android:textSize="15sp" />
-
-                <org.commcare.views.connect.RoundedButton
-                    android:id="@+id/connect_learning_refresh"
-                    android:layout_width="wrap_content"
-                    android:layout_height="40dp"
-                    android:layout_gravity="center"
-                    android:layout_marginStart="20dp"
-                    android:gravity="center"
-                    android:text="@string/sync"
-                    app:roundButtonIcon="@drawable/ic_refresh_white"
-                    app:roundButtonIconTintColor="@color/connect_blue_color"
-                    app:roundButtonTextColor="@color/connect_blue_color" />
-            </LinearLayout>
-        </androidx.cardview.widget.CardView>
 
     </LinearLayout>
 </ScrollView>
