Null-checking job in a few spots before attempting to access it.

--- a/app/res/layout/fragment_connect_jobs_list.xml
+++ b/app/res/layout/fragment_connect_jobs_list.xml
@@ -93,6 +93,7 @@
         android:layout_margin="40dp"
         android:text="@string/connect_no_jobs"
         android:textColor="@color/blue"
+        android:visibility="gone"
         app:layout_constraintTop_toBottomOf="@id/connect_alert_tile"/>
 
     <androidx.recyclerview.widget.RecyclerView
