--- a/app/res/layout/tabbed_detail_view.xml
+++ b/app/res/layout/tabbed_detail_view.xml
@@ -13,14 +13,19 @@
         <com.google.android.material.tabs.TabLayout
             android:id="@+id/tab_layout"
             android:layout_gravity="top"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:paddingTop="@dimen/content_min_margin"
             android:paddingBottom="@dimen/content_min_margin"
+            app:tabMode="scrollable"
+            app:tabGravity="center"
+            android:layout_weight="1"
+            app:tabPaddingStart="24dp"
+            app:tabPaddingEnd="24dp"
             app:tabIndicatorGravity="bottom"
-            app:tabIndicatorColor="@color/grey_dark"
-            app:tabTextColor="@color/cc_brand_text"
-            android:background="@color/cc_brand_bg" />
+            app:tabIndicatorColor="@color/blue_grey"
+            android:background="@color/cc_brand_bg"
+            app:tabTextAppearance="@style/CustomTabStyle" />
 
     </LinearLayout>
 
