--- a/app/res/values/styles.xml
+++ b/app/res/values/styles.xml
@@ -343,4 +343,8 @@
         <item name="textColor">@color/cc_brand_color</item>
     </style>
 
+    <style name="CustomTabStyle">
+        <item name="android:activatedBackgroundIndicator"/>
+    </style>
+
 </resources>
