--- a/app/res/layout/edit_text_question_widget.xml
+++ b/app/res/layout/edit_text_question_widget.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<EditText xmlns:android="http://schemas.android.com/apk/res/android"
+<org.commcare.views.connect.ConnectEditText xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:gravity="start"
     android:imeOptions="flagNoExtractUi"
@@ -7,6 +7,7 @@
     android:layout_width="match_parent"
     android:paddingEnd="8dp"
     android:paddingLeft="8dp"
+    android:layout_marginTop="5dp"
     android:paddingRight="8dp"
     android:paddingStart="8dp"
     android:scrollHorizontally="false"
