--- a/app/res/layout/home_screen.xml
+++ b/app/res/layout/home_screen.xml
@@ -15,9 +15,9 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="5dp"
         android:layout_marginTop="2dp"
-        android:padding="10dp"
         android:layout_marginEnd="5dp"
         android:background="@drawable/dots_rect_back"
+        android:padding="10dp"
         android:visibility="visible">
 
         <ImageView
@@ -33,8 +33,8 @@
         <org.commcare.views.connect.connecttextview.ConnectRegularTextView
             android:id="@+id/connect_phone_label"
             android:layout_width="0dp"
-            android:textSize="16dp"
             android:layout_height="match_parent"
+            android:textSize="16dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@id/connect_secondary_phone_icon"
             app:layout_constraintTop_toTopOf="parent" />
@@ -42,22 +42,22 @@
         <org.commcare.views.connect.connecttextview.ConnectMediumTextView
             android:id="@+id/connect_phone_yes_button"
             android:layout_width="wrap_content"
-            android:textSize="18sp"
             android:layout_height="wrap_content"
             android:layout_marginEnd="10dp"
             android:text="@string/connect_payment_confirm_yes"
             android:textColor="@color/blue"
+            android:textSize="18sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@id/connect_phone_label" />
 
         <org.commcare.views.connect.connecttextview.ConnectMediumTextView
             android:id="@+id/connect_phone_no_button"
-            android:textSize="18sp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="40dp"
             android:text="@string/connect_payment_confirm_no"
             android:textColor="@color/blue"
+            android:textSize="18sp"
             app:layout_constraintEnd_toStartOf="@id/connect_phone_yes_button"
             app:layout_constraintTop_toBottomOf="@id/connect_phone_label" />
     </androidx.constraintlayout.widget.ConstraintLayout>
@@ -86,18 +86,18 @@
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
+                    android:layout_marginBottom="15dp"
                     android:orientation="horizontal"
                     android:paddingStart="15dp"
                     android:paddingTop="35dp"
-                    android:layout_marginBottom="15dp"
                     android:paddingEnd="15dp">
 
                     <org.commcare.views.connect.connecttextview.ConnectMediumTextView
                         android:id="@+id/tvOverLimitDescription"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:text="@string/connect_job_tile_daily_limit_description"
                         android:layout_marginEnd="10dp"
+                        android:text="@string/connect_job_tile_daily_limit_description"
                         android:textColor="@color/connect_warning_color"
                         android:textSize="14sp"
                         app:layout_constraintBottom_toBottomOf="@+id/btnOverLimit"
@@ -118,14 +118,14 @@
             </androidx.cardview.widget.CardView>
 
             <include
-                layout="@layout/view_progress_job_card"
                 android:id="@+id/viewJobCard"
+                layout="@layout/view_progress_job_card"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="10dp"
-                android:layout_marginEnd="10dp"
                 android:layout_marginStart="10dp"
                 android:layout_marginTop="10dp"
-                android:layout_width="match_parent" />
+                android:layout_marginEnd="10dp"
+                android:layout_marginBottom="10dp" />
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/home_gridview_buttons"
