--- a/app/res/layout/screen_form_entry.xml
+++ b/app/res/layout/screen_form_entry.xml
@@ -11,6 +11,7 @@
         layout="@layout/connectid_title_bar"
         android:layout_width="match_parent"
         android:layout_height="55dp"
+        android:visibility="gone"
         android:layout_alignParentTop="true" />
 
     <FrameLayout
